--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
   },
   "devDependencies": {
     "@types/node": "^24.8.0",
+    "@types/uuid": "^10.0.0",
     "@types/vscode": "^1.105.0",
     "@vscode/test-electron": "^2.5.2",
     "typescript": "^5.9.3"
@@ -85,5 +86,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/your-username/code-context-notes"
+  },
+  "dependencies": {
+    "uuid": "^13.0.0"
   }
 }
