feat(keybindings): Add suggested keybindings for core commands
- Implement keybindings for primary Code Context Notes commands
- Add cross-platform support with separate Windows/Mac key mappings
- Include keybindings for add, delete, view history, and refresh notes
- Update TODO.md to mark keybindings task as completed
- Ensure keybindings are optional and context-sensitive

--- a/package.json
+++ b/package.json
@@ -125,6 +125,30 @@
     ],
     "keybindings": [
       {
+        "command": "codeContextNotes.addNote",
+        "key": "ctrl+alt+n",
+        "mac": "cmd+alt+n",
+        "when": "editorTextFocus && editorHasSelection"
+      },
+      {
+        "command": "codeContextNotes.deleteNote",
+        "key": "ctrl+alt+d",
+        "mac": "cmd+alt+d",
+        "when": "editorTextFocus"
+      },
+      {
+        "command": "codeContextNotes.viewHistory",
+        "key": "ctrl+alt+h",
+        "mac": "cmd+alt+h",
+        "when": "editorTextFocus"
+      },
+      {
+        "command": "codeContextNotes.refreshNotes",
+        "key": "ctrl+alt+r",
+        "mac": "cmd+alt+r",
+        "when": "editorTextFocus"
+      },
+      {
         "command": "codeContextNotes.insertBold",
         "key": "ctrl+b",
         "mac": "cmd+b",
