docs(project-setup): Add comprehensive project documentation and release preparation
- Create CHANGELOG.md with detailed project history and roadmap
- Add CONTRIBUTING.md with development guidelines and workflow
- Include LICENSE file for project legal information
- Update README.md with additional context and information
- Create documentation files in `docs/` directory:
* ARCHITECTURE.md for system design overview
* DOCUMENTATION_SUMMARY.md for documentation index
* MARKETPLACE_PREP.md for extension marketplace submission
* QUICK_REFERENCE.md for quick user guide
* RELEASE_CHECKLIST.md for release management
- Update TODO.md with current project status
- Add images/README.md for visual assets documentation
- Update package.json with project metadata and dependencies

--- a/package.json
+++ b/package.json
@@ -5,12 +5,21 @@
   "version": "0.1.0",
   "publisher": "your-publisher-name",
   "icon": "images/icon.png",
+  "galleryBanner": {
+    "color": "#1e1e1e",
+    "theme": "dark"
+  },
+  "bugs": {
+    "url": "https://github.com/your-username/code-context-notes/issues"
+  },
+  "homepage": "https://github.com/your-username/code-context-notes#readme",
   "engines": {
     "vscode": "^1.80.0"
   },
   "categories": [
     "Other",
-    "Notebooks"
+    "Notebooks",
+    "Programming Languages"
   ],
   "keywords": [
     "notes",
