chore(project-setup): Update project configuration and documentation
- Remove screenshot images from README.md to reduce repository size
- Update publisher name to 'jnahian' in package.json
- Update VSCode engine and type dependencies to version 1.80.0
- Enhance .vscodeignore to exclude additional files and build artifacts
- Simplify README.md by removing inline screenshots
- Prepare project for potential marketplace publication

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -26,6 +26,10 @@ docs/RELEASE_CHECKLIST.md
 # Build artifacts
 *.vsix
 
+# Environment files
+.env
+
 # Unused images
 images/logo.png
 images/README.md
+images/screenshot-*.jpg
