--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Code Context Notes",
   "description": "Add contextual notes to your code with full version history and intelligent tracking",
   "version": "0.1.0",
-  "publisher": "your-publisher-name",
+  "publisher": "jnahian",
   "icon": "images/icon.png",
   "galleryBanner": {
     "color": "#2d3748",
@@ -14,7 +14,7 @@
   },
   "homepage": "https://github.com/jnahian/code-context-notes#readme",
   "engines": {
-    "vscode": "^1.0.0"
+    "vscode": "^1.80.0"
   },
   "categories": [
     "Other",
@@ -273,7 +273,7 @@
     "@types/mocha": "^10.0.10",
     "@types/node": "^24.8.0",
     "@types/uuid": "^10.0.0",
-    "@types/vscode": "^1.105.0",
+    "@types/vscode": "^1.80.0",
     "@vscode/test-electron": "^2.5.2",
     "chai": "^6.2.0",
     "glob": "^11.0.3",
