chore(project-setup): Add packaging and publishing scripts for extension
- Add new scripts directory with package.js and publish.js automation scripts
- Update package.json with new npm scripts for packaging and publishing
- Modify .vscodeignore to exclude scripts directory from packaged extension
- Update extension display name to be more descriptive
- Implement comprehensive packaging script with git tagging and validation
- Add publishing script to support VSCode Marketplace and Open VSX Registry
- Enhance development workflow with automated packaging and publishing tools
Improves extension development and release management processes by introducing standardized scripts for packaging, testing, and publishing.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "code-context-notes",
-  "displayName": "Code Context Notes",
+  "displayName": "Code Context Notes - Smart Annotations",
   "description": "Add contextual notes to your code with full version history and intelligent tracking",
   "version": "0.1.0",
   "publisher": "jnahian",
@@ -265,7 +265,12 @@
     "lint": "eslint src --ext ts",
     "test": "node ./out/test/runTest.js",
     "test:unit": "npm run compile && node ./out/test/runUnitTests.js",
-    "test:coverage": "npm run compile && nyc --reporter=html --reporter=text node ./out/test/runUnitTests.js"
+    "test:coverage": "npm run compile && nyc --reporter=html --reporter=text node ./out/test/runUnitTests.js",
+    "publish": "node scripts/publish.js",
+    "publish:bash": "./scripts/publish.sh",
+    "package": "node scripts/package.js",
+    "package:simple": "vsce package",
+    "package:dev": "vsce package --no-git-tag-version"
   },
   "devDependencies": {
     "@types/chai": "^5.2.2",
