feat(extension): Migrate to ES modules and optimize package configuration
- Converted entire extension to ES modules (TypeScript module system)
- Updated tsconfig.json to support ES2022 module resolution
- Added .js extensions to all local import statements
- Updated .vscodeignore to include only production dependencies
- Optimized package size and improved module compatibility
- Fixed uuid v13.0.0 compatibility issues
- Prepared extension for more robust module loading
- Bumped version to 0.1.3 in package.json and CHANGELOG.md
Resolves compatibility challenges with modern npm packages and improves overall extension modularity and performance.

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -5,12 +5,21 @@ tsconfig.json
 # Test files
 .nyc_output/**
 coverage/**
-node_modules/**
+
+# Include only production dependencies, exclude devDependencies
+node_modules/**/test/**
+node_modules/**/tests/**
+node_modules/**/*.md
+node_modules/**/.npmignore
+node_modules/**/.eslintrc*
+node_modules/**/tsconfig.json
+node_modules/**/@types/**
 
 # Development files
 .claude/**
 CLAUDE.md
 NEXT_STEPS.md
+PROJECT_COMPLETE.md
 scripts/**
 
 # Documentation (keep only essential)
