feat(web): Initialize web application for Code Context Notes
- Add complete web application structure with React, TypeScript, and Vite
- Configure Tailwind CSS and shadcn/ui for styling and components
- Create landing page and documentation page components
- Set up project scripts for development, build, and deployment
- Add favicon, logo, and manifest files for web app
- Implement responsive design and SEO metadata
- Create README with project details, tech stack, and development instructions
- Add deployment script for easy web app publishing

--- a/package.json
+++ b/package.json
@@ -272,7 +272,10 @@
     "package": "node scripts/package.js",
     "package:simple": "vsce package",
     "package:dev": "vsce package --no-git-tag-version",
-    "test:package": "node scripts/test-package.js"
+    "test:package": "node scripts/test-package.js",
+    "web:install": "cd web && npm install",
+    "web:dev": "cd web && npm run dev",
+    "web:build": "cd web && npm run build"
   },
   "devDependencies": {
     "@types/chai": "^5.2.2",
