--- a/package.json
+++ b/package.json
@@ -275,7 +275,10 @@
     "test:package": "node scripts/test-package.js",
     "web:install": "cd web && npm install",
     "web:dev": "cd web && npm run dev",
-    "web:build": "cd web && npm run build"
+    "web:dev:ssr": "cd web && npm run dev:ssr",
+    "web:build": "cd web && npm run build",
+    "web:build:vercel": "cd web && npm run build:vercel",
+    "web:preview:ssr": "cd web && npm run preview:ssr"
   },
   "devDependencies": {
     "@types/chai": "^5.2.2",
