--- a/web/package.json
+++ b/web/package.json
@@ -5,7 +5,12 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "dev:ssr": "node server-dev.js",
+    "build": "npm run build:client && npm run build:server",
+    "build:client": "tsc && vite build --outDir dist/client",
+    "build:server": "tsc && vite build --ssr src/entry-server.tsx --outDir dist/server",
+    "build:vercel": "npm run build && cp -r dist/server api/ && cp -r dist/client/* .",
+    "preview:ssr": "npm run build && node server",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
@@ -22,6 +27,7 @@
   "devDependencies": {
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
+    "@types/express": "^4.17.21",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "@vitejs/plugin-react": "^4.1.1",
@@ -29,6 +35,7 @@
     "eslint": "^8.53.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
+    "express": "^4.18.2",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
     "tailwindcss-animate": "^1.0.7",
