feat(ssr): Refactor Server-Side Rendering (SSR) implementation
- Replace dedicated SSR API route with more flexible index handler
- Improve error handling and fallback mechanism for SSR rendering
- Update build and deployment scripts for better Vercel compatibility
- Simplify Vercel configuration with more generic routing
- Add dynamic SSR render function import with error handling
- Enhance caching and performance for server-side rendering
Streamlines SSR implementation and improves deployment flexibility for the web application.

--- a/web/package.json
+++ b/web/package.json
@@ -9,7 +9,7 @@
     "build": "npm run build:client && npm run build:server",
     "build:client": "tsc && vite build --outDir dist/client",
     "build:server": "tsc && vite build --ssr src/entry-server.tsx --outDir dist/server",
-    "build:vercel": "npm run build && cp -r dist/server api/ && cp -r dist/client/* .",
+    "build:vercel": "npm run build && mkdir -p server && cp -r dist/server/* server/ && cp dist/client/index.html .",
     "preview:ssr": "npm run build && node server",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
