--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "displayName": "Code Context Notes - Smart Annotations",
   "description": "Add contextual notes to your code with full version history and intelligent tracking",
   "version": "0.1.4",
-  "type": "module",
   "publisher": "jnahian",
   "icon": "images/icon.png",
   "galleryBanner": {
@@ -260,19 +259,20 @@
   },
   "scripts": {
     "vscode:prepublish": "npm run compile",
-    "compile": "tsc -p ./",
-    "watch": "tsc -watch -p ./",
-    "pretest": "npm run compile && npm run lint",
+    "compile": "node esbuild.config.js --production",
+    "compile:tsc": "tsc -p ./",
+    "watch": "node esbuild.config.js --watch",
+    "watch:tsc": "tsc -watch -p ./",
+    "pretest": "npm run compile:tsc && npm run lint",
     "lint": "eslint src --ext ts",
     "test": "node ./out/test/runTest.js",
-    "test:unit": "npm run compile && node ./out/test/runUnitTests.js",
-    "test:coverage": "npm run compile && nyc --reporter=html --reporter=text node ./out/test/runUnitTests.js",
-    "publish": "node scripts/publish.js",
+    "test:unit": "npm run compile:tsc && node ./out/test/runUnitTests.js",
+    "test:coverage": "npm run compile:tsc && nyc --reporter=html --reporter=text node ./out/test/runUnitTests.js",
+    "publish": "node scripts/publish.mjs",
     "publish:bash": "./scripts/publish.sh",
-    "package": "node scripts/package.js",
+    "package": "node scripts/package.mjs",
     "package:simple": "vsce package",
     "package:dev": "vsce package --no-git-tag-version",
-    "test:package": "node scripts/test-package.js",
     "web:install": "cd web && npm install",
     "web:dev": "cd web && npm run dev",
     "web:dev:ssr": "cd web && npm run dev:ssr",
@@ -288,10 +288,13 @@
     "@types/uuid": "^10.0.0",
     "@types/vscode": "^1.80.0",
     "@vscode/test-electron": "^2.5.2",
+    "@vscode/vsce": "^3.6.2",
     "chai": "^6.2.0",
+    "esbuild": "^0.25.11",
     "glob": "^11.0.3",
     "mocha": "^11.7.4",
     "nyc": "^17.1.0",
+    "ovsx": "^0.10.6",
     "typescript": "^5.9.3"
   },
   "license": "MIT",
