--- a/.nycrc
+++ b/.nycrc
@@ -1,5 +1,4 @@
 {
-  "extends": "@istanbuljs/nyc-config-typescript",
   "all": true,
   "check-coverage": true,
   "lines": 80,
@@ -7,11 +6,10 @@
   "functions": 80,
   "branches": 80,
   "include": [
-    "out/src/**/*.js"
+    "out/**/*.js"
   ],
   "exclude": [
     "out/test/**",
-    "out/src/test/**",
     "**/*.test.js",
     "**/*.d.ts"
   ],
