feat(comment-editor): Enhance comment thread lifecycle and editor management
- Add comprehensive documentation for comment editor architecture and lifecycle
- Implement auto-collapse of other notes when working on a single note
- Fix keyboard shortcuts to use modern comment UI with markdown support
- Resolve issue with + icon comment editor saving notes
- Update nyc test coverage configuration after esbuild migration
- Improve comment thread state tracking and management
- Add new helper method `closeAllCommentEditors()` in CommentController
- Enhance user experience with more informative labels and clearer actions
- Ensure better handling of temporary, editing, and viewing thread states
Addresses complex comment editor interaction challenges and provides a more focused, user-friendly note-taking experience in the extension.

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -41,16 +41,12 @@ scripts/**
 web/**
 app/**
 
-# Documentation (keep only essential)
-docs/TODO.md
-docs/ARCHITECTURE.md
-docs/TESTING*.md
-docs/DOCUMENTATION_SUMMARY.md
-docs/MARKETPLACE_PREP.md
-docs/RELEASE_CHECKLIST.md
+# Documentation
+docs
 
 # Git files
 .gitignore
+.github
 
 # Build artifacts
 *.vsix
