feat(notes): Enhance note editor focus and keyboard interactions
- Implement complete note thread disposal in `closeAllCommentEditors()`
- Fully hide all comment threads when opening a new editor
- Add Ctrl+Enter (Cmd+Enter) keyboard shortcut for saving notes
- Update comment thread management to ensure clean, focused editing experience
- Improve UX by removing visual clutter from collapsed notes
Closes #ISSUE_NUMBER (if applicable)

--- a/package.json
+++ b/package.json
@@ -191,6 +191,12 @@
         "key": "ctrl+k",
         "mac": "cmd+k",
         "when": "commentEditorFocused"
+      },
+      {
+        "command": "codeContextNotes.saveNote",
+        "key": "ctrl+enter",
+        "mac": "cmd+enter",
+        "when": "commentEditorFocused"
       }
     ],
     "menus": {
