feat(sidebar): Implement sidebar view with note management and commands

--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "commands": [
       {
         "command": "codeContextNotes.addNote",
-        "title": "Add Note to Selection",
+        "title": "Add Note",
+        "icon": "$(add)",
         "category": "Code Notes"
       },
       {
@@ -153,6 +154,18 @@
         "title": "Add Note",
         "icon": "$(add)",
         "category": "Code Notes"
+      },
+      {
+        "command": "codeContextNotes.openNoteFromSidebar",
+        "title": "Go to Note",
+        "icon": "$(go-to-file)",
+        "category": "Code Notes"
+      },
+      {
+        "command": "codeContextNotes.refreshSidebar",
+        "title": "Refresh Sidebar",
+        "icon": "$(refresh)",
+        "category": "Code Notes"
       }
     ],
     "keybindings": [
@@ -160,7 +173,7 @@
         "command": "codeContextNotes.addNote",
         "key": "ctrl+alt+n",
         "mac": "cmd+alt+n",
-        "when": "editorTextFocus && editorHasSelection"
+        "when": "editorTextFocus"
       },
       {
         "command": "codeContextNotes.deleteNote",
@@ -212,6 +225,18 @@
       }
     ],
     "menus": {
+      "view/title": [
+        {
+          "command": "codeContextNotes.addNote",
+          "when": "view == codeContextNotes.sidebarView",
+          "group": "navigation"
+        },
+        {
+          "command": "codeContextNotes.refreshSidebar",
+          "when": "view == codeContextNotes.sidebarView",
+          "group": "navigation"
+        }
+      ],
       "comments/commentThread/context": [
         {
           "command": "codeContextNotes.saveNewNote",
@@ -269,6 +294,30 @@
         }
       ]
     },
+    "viewsContainers": {
+      "activitybar": [
+        {
+          "id": "codeContextNotes",
+          "title": "Code Notes",
+          "icon": "images/icon.png"
+        }
+      ]
+    },
+    "views": {
+      "codeContextNotes": [
+        {
+          "id": "codeContextNotes.sidebarView",
+          "name": "Notes",
+          "contextualTitle": "Code Context Notes"
+        }
+      ]
+    },
+    "viewsWelcome": [
+      {
+        "view": "codeContextNotes.sidebarView",
+        "contents": "No notes found in this workspace.\n[Add Your First Note](command:codeContextNotes.addNote)\nSelect some code and add a note to get started!"
+      }
+    ],
     "configuration": {
       "title": "Code Context Notes",
       "properties": {
@@ -286,6 +335,24 @@
           "type": "boolean",
           "default": true,
           "description": "Show CodeLens indicators above code with notes"
+        },
+        "codeContextNotes.sidebar.previewLength": {
+          "type": "number",
+          "default": 50,
+          "minimum": 20,
+          "maximum": 200,
+          "description": "Maximum length of note preview text in sidebar"
+        },
+        "codeContextNotes.sidebar.autoExpand": {
+          "type": "boolean",
+          "default": false,
+          "description": "Automatically expand file nodes in sidebar"
+        },
+        "codeContextNotes.sidebar.sortBy": {
+          "type": "string",
+          "enum": ["file", "date", "author"],
+          "default": "file",
+          "description": "Sort notes by: file path, date, or author (file path only in v0.2.0)"
         }
       }
     }
