--- a/package.json
+++ b/package.json
@@ -413,12 +413,10 @@
         "codeContextNotes.sidebar.sortBy": {
           "type": "string",
           "enum": [
-            "file",
-            "date",
-            "author"
+            "file"
           ],
           "default": "file",
-          "description": "Sort notes by: file path, date, or author (file path only in v0.2.0)"
+          "description": "Sort notes by file path"
         }
       }
     }
