feat(changelog): Add version 0.2.1 changelog and context menu integration
- Create new changelog document for version 0.2.1
- Update package.json version to 0.2.1
- Add editor context menu contribution for "Add Note" command
- Document changes to CodeLens behavior and new context menu feature
- Prepare release notes highlighting new user experience improvements

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "code-context-notes",
   "displayName": "Code Context Notes - Smart Annotations",
   "description": "Add contextual notes to your code with full version history and intelligent tracking",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "publisher": "jnahian",
   "icon": "images/icon.png",
   "galleryBanner": {
@@ -255,6 +255,13 @@
       }
     ],
     "menus": {
+      "editor/context": [
+        {
+          "command": "codeContextNotes.addNote",
+          "group": "9_codeNotes@1",
+          "when": "editorTextFocus"
+        }
+      ],
       "view/title": [
         {
           "command": "codeContextNotes.addNote",
